--- a/main.html
+++ b/main.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <title>Testimonial Section Design</title>
+  <style>
+    /* Main container */
+    .testimonial-section {
+      background-color: #f5f5f5;
+      padding: 40px;
+    }
 
+    /* Individual testimonial box */
+    .testimonial {
+      background-color: white;
+      border: 1px solid #ccc;
+      padding: 20px;
+      margin-bottom: 20px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Testimonial text */
+    .testimonial p {
+      font-size: 16px;
+      color: #333;
+      margin: 0 0 10px 0;
+    }
+
+    /* Author name */
+    .author {
+      text-align: right;
+      font-style: italic;
+      color: #555;
+    }
+  </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <div class="testimonial-section">
+    <div class="testimonial">
+      <p>"This website helped me learn HTML and CSS easily. The tutorials are clear and practical!"</p>
+      <p class="author">- Sakshi Ghanwat</p>
+    </div>
+
+    <div class="testimonial">
+      <p>"Amazing platform for beginners! The examples are simple and easy to understand."</p>
+      <p class="author">- Abhishek Dhamankar</p>
+    </div>
+
+    <div class="testimonial">
+      <p>"I really enjoyed learning through these tasks. It made coding fun and interesting."</p>
+      <p class="author">- Priya Sharma</p>
+    </div>
+  </div>
 
 </body>
-
 </html>
+
