--- a/main.html
+++ b/main.html
@@ -3,13 +3,11 @@
 <head>
   <title>Testimonial Section Design</title>
   <style>
-    /* Main container */
     .testimonial-section {
       background-color: #f5f5f5;
       padding: 40px;
     }
 
-    /* Individual testimonial box */
     .testimonial {
       background-color: white;
       border: 1px solid #ccc;
@@ -22,14 +20,12 @@
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
 
-    /* Testimonial text */
     .testimonial p {
       font-size: 16px;
       color: #333;
       margin: 0 0 10px 0;
     }
 
-    /* Author name */
     .author {
       text-align: right;
       font-style: italic;
@@ -39,23 +35,26 @@
 </head>
 <body>
 
+  <h1>Testimonials</h1>
+
   <div class="testimonial-section">
     <div class="testimonial">
-      <p>"This website helped me learn HTML and CSS easily. The tutorials are clear and practical!"</p>
+      <p>"This platform is amazing for learning web development!"</p>
       <p class="author">- Sakshi Ghanwat</p>
     </div>
 
     <div class="testimonial">
-      <p>"Amazing platform for beginners! The examples are simple and easy to understand."</p>
+      <p>"The examples are easy to follow and practical."</p>
       <p class="author">- Abhishek Dhamankar</p>
     </div>
 
     <div class="testimonial">
-      <p>"I really enjoyed learning through these tasks. It made coding fun and interesting."</p>
+      <p>"I improved my coding skills using these exercises."</p>
       <p class="author">- Priya Sharma</p>
     </div>
   </div>
 
 </body>
 </html>
+
 
