--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
   <title>Testimonial Section Design</title>
   <style>
-    .testimonial-section {
+    body {
       background-color: #f5f5f5;
       padding: 40px;
     }
@@ -37,24 +37,23 @@
 
   <h1>Testimonials</h1>
 
-  <div class="testimonial-section">
-    <div class="testimonial">
-      <p>"This platform is amazing for learning web development!"</p>
-      <p class="author">- Sakshi Ghanwat</p>
-    </div>
+  <div class="testimonial">
+    <p>"This platform is amazing for learning web development!"</p>
+    <p class="author">- Sakshi Ghanwat</p>
+  </div>
 
-    <div class="testimonial">
-      <p>"The examples are easy to follow and practical."</p>
-      <p class="author">- Abhishek Dhamankar</p>
-    </div>
+  <div class="testimonial">
+    <p>"The examples are easy to follow and practical."</p>
+    <p class="author">- Abhishek Dhamankar</p>
+  </div>
 
-    <div class="testimonial">
-      <p>"I improved my coding skills using these exercises."</p>
-      <p class="author">- Priya Sharma</p>
-    </div>
+  <div class="testimonial">
+    <p>"I improved my coding skills using these exercises."</p>
+    <p class="author">- Priya Sharma</p>
   </div>
 
 </body>
 </html>
+
 
 
