--- a/main.html
+++ b/main.html
@@ -38,13 +38,11 @@
   <h1>Testimonials</h1>
 
   <div class="testimonial">
-    <p>"This platform is amazing for learning web development!"</p>
-    <p class="author">- Sakshi Ghanwat</p>
+    <p>"This platform is amazing for learning web development!" - Sakshi Ghanwat</p>
   </div>
 
   <div class="testimonial">
-    <p>"The examples are easy to follow and practical."</p>
-    <p class="author">- Abhishek Dhamankar</p>
+    <p>"The examples are easy to follow and practical." - Abhishek Dhamankar</p>
   </div>
 
   <div class="testimonial">
@@ -54,6 +52,7 @@
 
 </body>
 </html>
+
 
 
 
